# CHR-2027-migration_dossiers

./: .gitignore  pyproject.toml
data/annotations/: all_annotations.csv  merged_annotations.tsv
data/labels/: agreement_issues_pairwise.tsv  dossier_labels.tsv  label_mapping_unified.tsv  label_mappings_pairwise.tsv  mapped_single_annotator_labels.tsv  merge_disagreements.tsv  unmapped_labels.tsv
data/predictions/: functional_category_predictions.csv
scripts/: map_annotation_labels.py  map_singletons.py  merge_annotations.py  predict_functional_category.py
scripts/vision/: common.py  eval_document_level_from_embeddings.py  eval_page_from_embeddings.py  flag_prediction_errors.py  make_dummy_dataset.py  make_dummy_sequence_dataset.py  models.py  multimodal_data.py  pagexml.py  precompute_embeddings.py  predict.py  requirements.txt  sequence_data.py  sequence_model.py  train.py  train_from_embeddings.py
