[project]
name = "chr-2027-migration-dossiers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "scikit-learn>=1.9.0",
    "tomli-w>=1.2.0",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "transformers>=5.14.1",
]
